--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    //sots Dialog
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
     //circle image
     implementation 'de.hdodenhof:circleimageview:3.0.0'
