--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.marivramchoir">
+    package="com.example.marivramchoir" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,12 +17,15 @@
         android:theme="@style/Theme.MarIvramChoir"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup"
-        tools:targetApi="m">
+        tools:targetApi="m" >
+        <activity
+            android:name=".ui.view.LoginActivity"
+            android:theme="@style/loginTheme"
+            android:exported="false" />
         <activity
             android:name=".ui.view.SplashActivity"
             android:exported="true"
-            android:theme="@style/App_Tot_Theme"
-            >
+            android:theme="@style/App_Tot_Theme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +35,7 @@
         <activity
             android:name=".ui.view.AppTutorialActivity"
             android:exported="false"
-            android:theme="@style/App_Tot_Theme"/>
+            android:theme="@style/App_Tot_Theme" />
         <activity
             android:name=".ui.view.AddHymnsInServantActivity"
             android:exported="false" />
@@ -65,7 +68,7 @@
             android:theme="@style/AllHymensTheme" />
         <activity
             android:name=".ui.view.DashboardActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
